translation notebook comment change

--- a/translation/train_and_eval_notebook.ipynb
+++ b/translation/train_and_eval_notebook.ipynb
@@ -293,6 +293,7 @@
     "## Task 2: Comparing models\n",
     "- Compare different NMT models that have been previously trained by us with the same code and same dataset.\n",
     "- We have used the same hyperparameters except `tokenizer`, `model` and `add_adapter`.\n",
+    "- The models have been trained on a Nvidia Quadro RTX 6000 (24GB RAM)\n",
     "\n",
     "### Our models:\n",
     "- __BART_base__:\n",
@@ -388,7 +389,7 @@
     "tp_bart_base, ntp_bart_base = model.num_parameters()\n",
     "start_time = time.time()\n",
     "test_bleu_bart_base = trainer.test(model)[0]['BLEU']\n",
-    "training_time_bart_base = 2972 / 60\n",
+    "training_time_bart_base = 2972 / 60 # Note that the training time is harcoded (this is the time it took as to train this model in a Nvidia Quadro RTX 6000\n",
     "inference_time_bart_base = (time.time() - start_time) / 60\n",
     "translation_example_bart_base = model.translate_example(sentence)\n",
     "print('BART_base:')\n",
@@ -427,7 +428,7 @@
     "tp_bart_base_plus_adapter, ntp_bart_base_plus_adapter = model.num_parameters()\n",
     "start_time = time.time()\n",
     "test_bleu_bart_base_plus_adapter = trainer.test(model)[0]['BLEU']\n",
-    "training_time_bart_base_plus_adapter = 1880 / 60\n",
+    "training_time_bart_base_plus_adapter = 1880 / 60 # Note that the training time is harcoded (this is the time it took as to train this model in a Nvidia Quadro RTX 6000\n",
     "inference_time_bart_base_plus_adapter = (time.time() - start_time) / 60\n",
     "translation_example_bart_base_plus_adapter = model.translate_example(sentence)\n",
     "print('BART_base_plus_adapter:')\n",
@@ -473,7 +474,7 @@
     "tp_mbart_large_plus_adapter, ntp_mbart_large_plus_adapter = model.num_parameters()\n",
     "start_time = time.time()\n",
     "test_bleu_mbart_large_plus_adapter = trainer.test(model)[0]['BLEU']\n",
-    "training_time_mbart_large_plus_adapter = 4258 / 60\n",
+    "training_time_mbart_large_plus_adapter = 4258 / 60  # Note that the training time is harcoded (this is the time it took as to train this model in a Nvidia Quadro RTX 6000\n",
     "inference_time_mbart_large_plus_adapter = (time.time() - start_time) / 60\n",
     "translation_example_mbart_large_plus_adapter = model.translate_example(sentence)\n",
     "print('mBART_large_plus_adapter:')\n",
@@ -577,9 +578,9 @@
     "# Compare translation examples\n",
     "print('BART_base:')\n",
     "print(' -> ', translation_example_bart_base)\n",
-    "print('BART_base_plus_adaptr:')\n",
+    "print('BART_base (wa):')\n",
     "print(' -> ', translation_example_bart_base_plus_adapter)\n",
-    "print('mBART_large_plus_adapter:')\n",
+    "print('mBART_large (wa):')\n",
     "print(' -> ', translation_example_mbart_large_plus_adapter)"
    ]
   },
