changes to notebook and README.md file

--- a/summarisation/train_and_eval_notebook.ipynb
+++ b/summarisation/train_and_eval_notebook.ipynb
@@ -48,7 +48,7 @@
    "source": [
     "#### Install requirements\n",
     "__Note__: You may have to re-start the runtime environment in Google Colab after\n",
-    "installing the requried packages."
+    "installing the required packages."
    ]
   },
   {
